prevent clipping of dataframe tables out of view

--- a/static/main.css
+++ b/static/main.css
@@ -10,7 +10,7 @@ html, body {
   height: 100%;
   background-color: #006666;
   color: #e6ffff;
-  overflow: hidden;
+  overflow: auto;
   text-align: center;
 }
 
